# yosys_verific_rs

./: .gitmodules  BuildAction.ps1  CMakeLists.txt  LICENSE  Makefile  README.md  Windows_Build.md  workflow_test.json  yosys_verific_rs_VS.sln
.github/: ci_settings.json  set_paths.sh
.github/scripts/: install_centos_dependencies_build.sh  install_macos_dependencies_build.sh  install_ubuntu_dependencies_build.sh
.github/workflows/: CI.yml  WindowsBuild.yml  ci_regression.yml  dayly_tests.yml  exp.yml  main.yml  test.yml  time_test.yml  valgrind.yml  version.yml  weekly_regression.yml
analyze/: CMakeLists.txt  README.md
analyze/src/: analyze.cc  hier_dump.cc  hier_dump.h  port_dump.cc  port_dump.h
analyze/tests/: Makefile
analyze/tests/Trivium_Module/: Key_Sequence_Module.vhd  analyze.cmd  gold.json  gold_hier.json
analyze/tests/Trivium_Module/rtl/: Trivium_Module.vhd
analyze/tests/b12/: analyze.cmd  gold.json  gold_hier.json
analyze/tests/b17/: analyze.cmd  gold.json  gold_hier.json
analyze/tests/gpio/: analyze.cmd  gpio_reg_top.sv  prim_diff_decode.sv  prim_subreg.sv  tlul_rsp_intg_gen.sv
analyze/tests/gpio/rtl/: gpio.sv  otp_ctrl_pkg.sv  prim_alert_sender.sv  prim_buf.sv  prim_generic_buf.sv  tlul_adapter_reg.sv  tlul_cmd_intg_chk.sv  tlul_data_integ_dec.sv  tlul_data_integ_enc.sv  tlul_err.sv
benchmark_synthesis_run/: config_1.json
benchmarks/system_verilog/: scm_design.ys  udma_core_design.ys
design_edit/: Makefile  run_tests.sh  update_gold.sh
design_edit/gen_map/: CMakeLists.txt  rs_primitive.cpp
design_edit/src/: netlist_checker.cc  netlist_checker.h  primitives_extractor.cc  primitives_extractor.h  rs_design_edit.cc  rs_design_edit.h  rs_primitive.h
patches/: giaDup.patch
pow_extract/: Makefile  README.md
pow_extract/src/: rs_pow_extract.cc
scripts/: export_env.sh  increment_version.sh
scripts/log_automation/: README.md  result_comparision.py  run_metrics_extractor.py
scripts/synth/: README.md  synthesis.py  template.ys  vivado_script_template.tcl
scripts/task_generator/: README.md  default_settings.json  run_task_generator.py
scripts/yosys_templates/: qlf_yosys+verific.ys  ys_tmpl_yosys+verific_vpr_bram_dsp_dff_flow.ys  ys_tmpl_yosys+verific_vpr_bram_dsp_flow.ys  ys_tmpl_yosys+verific_vpr_bram_flow.ys  ys_tmpl_yosys+verific_vpr_dff_flow.ys  ys_tmpl_yosys+verific_vpr_dsp_flow.ys  ys_tmpl_yosys+verific_vpr_flow.ys  ys_tmpl_yosys+verific_vpr_flow_with_rewrite.ys
scripts/yosys_validation/: bram.svh  file_list.sv  validation.py
suites/: RTL_Benchmarks.json  test_vivado.json  test_yosys.json
suites/All/: All_lut_noshare_verific_abc6.json  All_lut_rs_abc_a21.json  All_lut_share_verific_abc6.json  All_lut_synth_ql_verific.json  All_lut_synth_rs_ade.json  All_lut_synth_rs_area.json  All_lut_synth_rs_dde.json  All_lut_synth_rs_mde.json  All_lut_synth_verific_abc6.json  All_lut_synth_verific_lut6.json  All_lut_vivado.json  All_noshare_verific_abc6.json  All_share_verific_abc6.json  All_synth_ql_verific.json  All_synth_rs_area.json  All_verific_abc6.json  All_verific_lut6.json  All_vivado.json
suites/Custom/: Custom_synth_rs_ade.json  Custom_synth_rs_dde.json  Custom_synth_rs_mde.json  Custom_vivado.json
suites/Daily-tests/: Daily-tests_synth_rs_ade_no_bram_no_dsp.json  Daily-tests_synth_rs_ade_no_bram_with_dsp.json  Daily-tests_synth_rs_ade_with_bram_no_dsp.json  Daily-tests_synth_rs_ade_with_bram_with_dsp.json  Daily-tests_synth_rs_dde_no_bram_no_dsp.json  Daily-tests_synth_rs_dde_no_bram_with_dsp.json  Daily-tests_synth_rs_dde_with_bram_no_dsp.json  Daily-tests_synth_rs_dde_with_bram_with_dsp.json  Daily-tests_synth_rs_mde_no_bram_no_dsp.json  Daily-tests_synth_rs_mde_no_bram_with_dsp.json  Daily-tests_synth_rs_mde_with_bram_no_dsp.json  Daily-tests_synth_rs_mde_with_bram_with_dsp.json  Daily-tests_vivado_no_bram_no_dsp.json  Daily-tests_vivado_no_bram_with_dsp.json  Daily-tests_vivado_with_bram_no_dsp.json  Daily-tests_vivado_with_bram_with_dsp.json
suites/EPFL/: EPFL_lut_noshare_verific_abc6.json  EPFL_lut_share_verific_abc6.json  EPFL_lut_synth_ql_verific.json  EPFL_lut_synth_rs_area.json  EPFL_lut_synth_verific_abc6.json  EPFL_lut_synth_verific_lut6.json  EPFL_lut_vivado.json
suites/Golden/: BRAM_DSP_genesis3.json  BRAM_DSP_vivado.json  Golden_synth_rs_ade.json  Golden_synth_rs_ade_no_bram_no_dsp.json  Golden_synth_rs_ade_no_bram_with_dsp.json  Golden_synth_rs_ade_with_bram_no_dsp.json  Golden_synth_rs_ade_with_bram_with_dsp.json  Golden_synth_rs_dde.json  Golden_synth_rs_dde_no_bram_no_dsp.json  Golden_synth_rs_dde_no_bram_with_dsp.json  Golden_synth_rs_dde_with_bram_no_dsp.json  Golden_synth_rs_dde_with_bram_with_dsp.json  Golden_synth_rs_mde.json  Golden_synth_rs_mde_no_bram_no_dsp.json  Golden_synth_rs_mde_no_bram_with_dsp.json  Golden_synth_rs_mde_with_bram_no_dsp.json  Golden_synth_rs_mde_with_bram_with_dsp.json  Golden_vivado.json  Golden_vivado_no_bram_no_dsp.json  Golden_vivado_no_bram_with_dsp.json  Golden_vivado_with_bram_no_dsp.json  Golden_vivado_with_bram_with_dsp.json  exp.json  exp1.json
suites/IP_Core/: vexriscv_designs.json
suites/IWLS2005/: IWLS2005_lut_noshare_verific_abc6.json  IWLS2005_lut_share_verific_abc6.json  IWLS2005_lut_synth_ql_verific.json  IWLS2005_lut_synth_rs_area.json  IWLS2005_lut_synth_verific_abc6.json  IWLS2005_lut_synth_verific_lut6.json  IWLS2005_lut_vivado.json  IWLS2005_noshare_noverific_abc6.json  IWLS2005_noshare_verific_abc6.json  IWLS2005_noverific_abc6.json  IWLS2005_noverific_lut6.json  IWLS2005_share_noverific_abc6.json  IWLS2005_share_verific_abc6.json  IWLS2005_synth_rs_area.json  IWLS2005_verific_abc6.json  IWLS2005_verific_lut6.json  IWLS2005_vivado.json  IWLS2005_yosys_noverific_abc6.json  IWLS2005_yosys_noverific_lut6.json  IWLS2005_yosys_verific_abc6.json  IWLS2005_yosys_verific_lut6.json
suites/RTL_Benchmarks/: RTL_Benchmarks_lut_noshare_verific_abc6.json  RTL_Benchmarks_lut_share_verific_abc6.json  RTL_Benchmarks_lut_synth_ql_verific.json  RTL_Benchmarks_lut_synth_rs_area.json  RTL_Benchmarks_lut_synth_verific_abc6.json  (+12 more)
synth_pow/: Makefile  README.md
(+723 files in other folders)
